unpackaged/main/default/objects/project_cloud__Capability__c/project_cloud__Capability__c.object-meta.xml
<CustomObject>
    <description>The capabilities of your resources to perform a given work type</description>
    <label>Capability</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Capability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>