unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__Active__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox indicating if the resource can currently have tasks assigned to it
(Cloud Coach 10-NOV-10)</description>
    <inlineHelpText>Checkbox indicating if the resource can currently have tasks assigned to it</inlineHelpText>
    <label>Resource Eligibility</label>
    <type>Checkbox</type>
</CustomField>