unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <description>Depending on what type of resource is selected Display a description from the relevant object</description>
    <formula>IF(NOT(ISBLANK(project_cloud__User__c)),
	project_cloud__User__r.FirstName &amp; &#39; &#39; &amp; project_cloud__User__r.LastName,
/*ELSE*/IF(NOT(ISBLANK(project_cloud__Project_Task__c)),
	project_cloud__Project_Task__r.Name,
/*ELSE*/IF(NOT(ISBLANK(project_cloud__External_Resource__c)),
	project_cloud__External_Resource__r.Name,
/*ELSE*/
	&#39;Orphan Capability&#39;
)))</formula>
    <label>Resource or Project Task</label>
    <type>Text</type>
</CustomField>