unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__External_Resource__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__External_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will show what External Resource or User is related to the Capability record.</description>
    <inlineHelpText>This field will show what External Resource or User is related to the Capability record.</inlineHelpText>
    <label>External Resource</label>
    <referenceTo>project_cloud__External_Resource__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <type>Lookup</type>
</CustomField>