unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <description>Calculate a hash of the Capability so the configuration trigger can detect and prevent duplicates</description>
    <formula>project_cloud__External_Resource__c + project_cloud__User__c + project_cloud__Project_Task__c + project_cloud__Work_Type__c</formula>
    <inlineHelpText>This field helps detect and prevent Capability duplicates.</inlineHelpText>
    <label>Hash</label>
    <type>Text</type>
</CustomField>