unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Per_Day__c</fullName>
    <inlineHelpText>This field will identify how many hours per day a user with that capability can be resourced.</inlineHelpText>
    <label>Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>