unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsDuplicate__c</fullName>
    <description>This field is used to overcome the shortcoming of SOQL, which is that the clauses cannot compare fields. The primary use for this field is to find capabilities that are duplicates of the primary work type on a project task.</description>
    <formula>NOT(ISBLANK(project_cloud__Project_Task__c)) &amp;&amp; project_cloud__Work_Type__c = project_cloud__Project_Task__r.project_cloud__Work_Type__c</formula>
    <inlineHelpText>If the Primary Work Type on the Project Task this Capability is related to is the same as this capability. The formula evaluates to true.</inlineHelpText>
    <label>Duplicates Primary Work Type?</label>
    <type>Checkbox</type>
</CustomField>