unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__Proficiency__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Proficiency__c</fullName>
    <inlineHelpText>This field will identify a proficiency rating for a user in a related expertise.</inlineHelpText>
    <label>Proficiency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>