unpackaged/main/default/objects/project_cloud__Capability__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Cloud Coach 18-OCT-10)</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capabilities</relationshipName>
    <type>Lookup</type>
</CustomField>