unpackaged/main/default/objects/project_cloud__Capability__c/validationRules/project_cloud__Capability_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Capability_Read_Only</fullName>
    <active>true</active>
    <description>Capabilities are joining objects that should never be modfied. Prevent the lookups or owner from changing</description>
    <errorConditionFormula>ISCHANGED(project_cloud__External_Resource__c) ||
ISCHANGED(project_cloud__User__c) ||
ISCHANGED(project_cloud__Project_Task__c)</errorConditionFormula>
    <errorMessage>Please do not modify Capabilities, to make changes delete and/or create new records.</errorMessage>
</ValidationRule>