unpackaged/main/default/objects/project_cloud__Capability__c/validationRules/project_cloud__External_Resource_OR_User_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__External_Resource_OR_User_Only</fullName>
    <active>true</active>
    <description>Make sure exactly one of the External Resource, User or Project Task lookups is selected</description>
    <errorConditionFormula>IF(ISBLANK(project_cloud__External_Resource__c), 0, 1) +
IF(ISBLANK(project_cloud__User__c), 0, 1) +
IF(ISBLANK(project_cloud__Project_Task__c), 0, 1) != 1</errorConditionFormula>
    <errorMessage>Please select a single External Resource, User or Project Task</errorMessage>
</ValidationRule>